# simple-docker-flask-deploy-to-heroku

./: README.md  pyproject.toml  requirements.txt
sample/: Dockerfile  requirements.txt  run.py  steps.txt
sdf_heroku_deploy/: __init__.py  sdfh_cli.py  simple_df_deploy.py
